name: "1 - Recipe Edit From Search Flow"
appId: "com.recipedia"
tags:
  - recipe-edit
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Action - Navigate to Search screen"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      text: "Pesto Pasta"
    direction: DOWN
    speed: 40
    timeout: 120000
    centerElement: true
    label: "Action - Scroll to find Pesto Pasta"

- waitForAnimationToEnd

- tapOn:
    text: "Pesto Pasta"
    label: "Action - Open Pesto Pasta recipe"

- runFlow:
    file: "../../asserts/recipe/readonly/en/pestoPasta.yaml"
    label: "Assert - Verify Pesto Pasta recipe is displayed correctly"

- runFlow:
    file: "../../flows/recipe/tapRecipeEdit.yaml"
    label: "Action - Tap on the Edit button"

- runFlow:
    file: "../../asserts/recipe/edit/pestoPasta.yaml"
    label: "Assert - Verify Pesto Pasta edit screen is displayed correctly"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::Title"
    direction: DOWN
    speed: 40
    timeout: 120000
    centerElement: true
    label: "Action - Scroll back to top of nutrition part"

- waitForAnimationToEnd

- runFlow:
    file: "../../flows/recipe/editing/editNutrition.yaml"
    env:
      NEW_ENERGY_KCAL: "450"
      NEW_PROTEIN: "18"
      NEW_FAT: "17"
    label: "Action - Edit nutrition values"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionTable::Title"
    direction: UP
    speed: 40
    centerElement: true
    label: "Action - Scroll back to top of nutrition part"

- waitForAnimationToEnd

- runFlow:
    file: "../../flows/recipe/editing/editNutrition.yaml"
    env:
      NEW_ENERGY_KCAL: "425"
      NEW_PROTEIN: "16.5"
      NEW_FAT: "15.8"
    label: "Action - Revert nutrition values"

- tapOn:
    id: "Recipe::AppBar::Validate"
    label: "Action - Save changes and return to read-only mode"

- tapOn:
    id: "Recipe::AppBar::BackButton"
    label: "Action - Back to the Search Screen"
